Break report into multiple pages

--- a/wotemu/report/templates/base.html
+++ b/wotemu/report/templates/base.html
@@ -18,6 +18,6 @@
     </script>
   </head>
   <body>
-    <div class="container-fluid" id="root"></div>
+    <div class="container-fluid p-3" id="root"></div>
   </body>
 </html>
